# Anime-recommendation-and-streaming-platform

./: README.md  app.py  pyproject.toml
